# ChessOxygine

./: .gitignore  CMakeLists.txt  README.md
src/: Game.cpp  Game.h  PieceData.h  main.cpp
